# pyros-schemas

./: .gitignore  .gitmodules  .pyup.yml  .travis.yml  CHANGELOG.rst  CMakeLists.txt  LICENSE  MANIFEST.in  README.rst  package.xml  setup.py  tox.ini  travis_checks.bash
doc/: Makefile  conf.py  index.rst  modules.rst  pyros_schemas.fields.rst  pyros_schemas.fields.tests.rst  pyros_schemas.rst  pyros_schemas.tests.rst
pyros_schemas/: __init__.py  _version.py  decorators.py  http_statuscode.py  opt_Bool.py  opt_Empty.py  opt_Nested.py  opt_String.py  std_Bool.py  std_Duration.py  std_Empty.py  std_Float.py  std_Header.py  std_Int.py  std_String.py  std_Time.py
pyros_schemas/fields/: __init__.py  opt_bool.py  opt_nested.py  opt_string.py  ros.py  ros_extras.py
pyros_schemas/fields/tests/: test_opt_string.py  test_ros.py  test_ros_extras.py
pyros_schemas/ros/: __init__.py  basic_fields.py  decorators.py  exceptions.py  fields.py  helpers.py  optional_fields.py  schema.py  schema_fields.py  schemagic.py  std_msgs_schemas.py  time_fields.py  types_mapping.py  utils.py
pyros_schemas/ros/pyros_msgs/: __init__.py  extra_OptNested.py  pyros_OptBool.py  pyros_OptEmpty.py  pyros_OptString.py
pyros_schemas/tests/: test_decorators.py  test_doctest_runner.py  test_std_schema.py
pyros_schemas/utils/: __init__.py  decorators.py
requirements/indigo/: debs_in_venv.txt
requirements/kinetic/: debs_in_venv.txt
requirements/lunar/: debs_in_venv.txt
requirements/python/: indigo.txt  kinetic.txt  latest.txt  lunar.txt  tests.txt
tests/: __init__.py  __main__.py  hypothesis_example.py  test_basic_fields.py  test_optional_fields.py  test_schema.py
tests/test_pyros_schemas/: __init__.py  conftest.py  hypothesis_example.py  msg_generate.py  test_basic_fields.py  test_decorators.py  test_optional_as_array_fields.py  test_schema.py
(+38 files in other folders)
